[package]
name = "ssh-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tokio I/O driver and filesystem key stores for the ssh-transport engine (Infra layer)"

[lints]
workspace = true

[dependencies]
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }
ssh-transport.workspace = true
tokio = { version = "1.52.3", features = ["net", "io-util", "macros", "rt-multi-thread", "time", "process", "sync"] }

[dev-dependencies]
