[package]
name = "ssh-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure-Rust, sans-IO SSH-2.0 transport, auth, and connection protocol engine"

[lints]
workspace = true

# Versions are pinned for coherence: `ssh-key` 0.6 anchors `ssh-encoding` 0.2 and
# `sha2` 0.10, and the dalek crates use `rand_core` 0.6 — mixing majors would create
# two incompatible copies of the same trait crate.
[dependencies]
ssh-encoding = "0.2"
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
# `zeroize` enabled so SigningKey scrubs its secret on drop (host/user private keys).
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
chacha20 = { version = "0.10", features = ["legacy"] } # ChaCha20Legacy: 64-bit nonce
poly1305 = "0.9"
# (chacha20-poly1305@openssh.com is built from these two primitives, not the
# combined IETF `chacha20poly1305` AEAD, whose nonce/key construction differs.)
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
aes-gcm = "0.10"
# Scrub key material, derived keys, the DH shared secret, and passwords on drop.
# (x25519-dalek already zeroizes its secrets via its default features.)
zeroize = { version = "1", features = ["derive"] }
# `zlib@openssh.com` compression. Default features use the pure-Rust miniz_oxide backend.
flate2 = "1"
# ML-KEM-768 for the `mlkem768x25519-sha256` PQ-hybrid key exchange. `zeroize` scrubs the
# decapsulation key; `hazmat` exposes the deterministic keygen/encapsulation entry points
# so we can drive ML-KEM from our own `rand_core` 0.6 CSPRNG (drawing the seed/message
# bytes ourselves) rather than its `rand_core` 0.10 RNG API — keeping a single RNG source
# across the dalek/ml-kem boundary. (ml-kem still pulls a 0.10 `rand_core` transitively for
# `crypto-common`, but we never cross that trait boundary.)
ml-kem = { version = "0.3.2", features = ["hazmat", "zeroize"] }
# Streamlined NTRU Prime (sntrup761) for the `sntrup761x25519-sha512@openssh.com` hybrid
# KEX. Pure Rust (no C/FFI), with secret types that are `ZeroizeOnDrop`. We use its
# deterministic seed-based keygen/encapsulation so it runs off our own `rand_core` 0.6
# CSPRNG (it pulls `rand` 0.10 transitively, but we never cross that RNG trait boundary).
sntrup761 = "0.4.0"

[dev-dependencies]
criterion = "0.8.2"
rand_chacha = "0.3"

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "kex"
harness = false

[[bench]]
name = "transport"
harness = false
