[package]
name = "ssh-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ratatui backend and terminal input parsing for in-process SSH TUI handlers"

[lints]
workspace = true

[dependencies]
ratatui = { version = "0.30.1", default-features = false, features = ["std", "layout-cache"] }
ssh-io.workspace = true
tokio = { version = "1.52.3", features = ["io-util", "sync", "time"] }

[dev-dependencies]
ssh-transport.workspace = true
tokio = { version = "1.52.3", features = ["net", "io-util", "macros", "rt-multi-thread", "time", "sync"] }
